src/index.css
@font-face {
  font-family: "font1";
  src: url("/fonts/PlaywriteFRModerne-VariableFont_wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
}

@keyframes floatUp {
  0%,
  100% {
    transform: translateX(0px) rotate(2.5deg);
  }
  50% {
    transform: translateX(0px) translateY(-12px) rotate(2.5deg);
  }
}

@keyframes floatDown {
  0%,
  100% {
    transform: rotate(-2.5deg);
  }
  50% {
    transform: translateY(12px) rotate(-2.5deg);
  }
}

html {
  scroll-snap-type: y proximity;
  scroll-behavior: smooth;
  height: 100%;
}

body {
  font-family: "font1";
  margin: 0;
  padding: 0;
  min-height: 100vh;   
  min-width: 350px;
  overflow-y: scroll;
}



/*---------------Hero page---------------*/
.hero-container {
  background-image: url("/hero-background.png");
  background-size: cover;
  position: relative;
  overflow: visible;
  display: flex;
  flex-direction: column;
  gap: 30px;
  align-items: center;
  justify-content: space-between;
  min-height: 100svh;
}

.hero-text-container {
  margin-left: 0;
  margin-top: 0%;
  padding: 5vh 2vh 0 2vh;
  gap: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.hero-text-wrapper {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.hero-text-wrapper h1 {
  font-size: 6vh;
  line-height: 1.4;
  width: max-content;
  text-shadow: 6px 5px 6px rgba(0, 0, 0, 0.42);
  margin-bottom: 0%;
}

.hero-text-wrapper h1 span {
  font-size: 8vh;
}

.block {
  display: block;
}

.hero-text-wrapper h2 {
  font-size: 1.5vh;
  line-height: 1.3;
  width: auto;
  text-shadow: 6px 5px 3px rgba(85, 85, 85, 0.54);
  color: #555;
  margin-top: 0%;
  text-align: center;
}

.stickynotes-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  row-gap: 0;
  padding: 16px;
  width: auto;
  height: fit-content;
  padding: 0 0 0 3vh;
}

.sticky-note {
  display: flex;
  gap: 16px;
  padding: 0;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  position: relative;
  transition: transform 0.2s ease;
  height: fit-content;
}

.sticky-note img {
  object-fit: fill;
  width: 70px;
  height: 70px;
  display: block;
}

.sticky-note span {
  font-size: 13px;
  font-weight: 400;
  color: #555;
  text-align: center;
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 10px;
  color: #333;
  text-align: center;
  pointer-events: none;
}

.sticky-note:hover {
  transform: scale(1.05);
  opacity: 1;
}

.profile-image-container {
  margin-top: auto;
  height: auto;
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60%;
  max-width: 400px;
  width: 260px;
  margin-bottom: 0;
  padding-bottom: 0;
}

.profile-image-container img {
  width: 100%;
  height: auto;
  object-fit: contain;
  display: block;
  padding-bottom: 0;
  margin-bottom : 0;
}

.hero-text-container,
.profile-image-container {
  flex: 1;
}



/*---------------About page---------------*/
.aboutme-container {
  background-image: url("/dotted.svg");
  background-size: 100vh;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
   min-height: 100vh;
}

.aboutme-text-container {
  display: flex;
  flex-direction: column;
  max-width: 1300px;
  box-sizing: border-box;
}

.aboutme-text-container h1 {
  font-size: 4vh;
  margin-top: 4.4vh; 
  margin-bottom: 1.5vh;
  text-align: center;
}

.aboutme-text-container p {
  padding: 0 3vh 0 3vh;
  font-size: 1.5vh;
  text-align: left;
  line-height: 2.5;
}

.para2 {
  margin-bottom: 20px;
}



/*---------------Projects page---------------*/
.projects-container {
  background-image: url("/grid.svg");
  background-size:cover;
   min-height: 100vh;
   padding-bottom: 5vh;
   padding-top: 0.1vh;
}

.projects-container h1 {
  font-size: 4vh;
  margin-top: 4.4vh;
  margin-bottom: 1.5vh;
  text-align: center;
}

.rectangle-container {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 100px;
  width: 90%;
  margin: 40px auto;
  padding: 0 3vh 5vh 3vh;
  justify-items: center;
}

.rectangle {
  min-width: 300px;
  max-width: 450px;
  background-color: rgba(239, 232, 222, 0.805);
  height: auto;
  border: 3px solid black;
  display: flex;
  flex-direction: column;
  padding: 10px;
  box-sizing: border-box;
  transition: transform 0.1s ease;
  align-items: center;
  justify-content: center;
}

.rectangle h2 {
  text-align: center;
  margin: 0 auto;
  width: 100%;
  border: 2px solid black;
  padding: 6px 0;
}

.title {
  text-shadow: 0 0 5px #000;
  width: auto;
}

.category {
  color: #555;
  font-weight: 400;
  font-size: 20px;
  border: solid;
  padding: 0 10px 0 10px;
  background-color: aliceblue;
  -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
  box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
}

.rectangle p {
  padding: 0 10px 10px 10px;
  margin: 0;
  font-size: 16px;
  text-align: center;
}

.rectangle:nth-child(odd) {
  transform: rotate(1.5deg);
  animation: floatDown 3s ease-in-out infinite;
}

.rectangle:nth-child(even) {
  transform: rotate(-1.5deg);
  animation: floatUp 3s ease-in-out infinite;
}

.contact-container {
  background: url("/lastpage.svg") repeat-y;
  background-size: 100% auto;
  position: relative;
  overflow: hidden;
  font-family: "font1";
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  margin-top: 0;
}

.contact-text-container h1 {
   font-size: 4vh;
  margin-top: 4.4vh;
  margin-bottom: 1.5vh;
  text-align: center;
}

.contact-icons {
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
  justify-content: center;
  width: 100%;
  max-width: 900px;
  place-items: center;
}

.contact-icons img {
  width: 100px;
  height: 100px;
  object-fit: contain;
    transition: transform 0.3s ease;
}

.contact-icons a {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.social-caption {
  font-size: 16px;
  color: #555;
  text-align: center;
  margin-top: 8px;
}
.contact-icons a:nth-child(odd) {
  transform: rotate(-5deg);
}

.contact-icons a:nth-child(even) {
  transform: rotate(5deg);
}
.contact-icons a:hover {
  transform: scale(1.2) rotate(0deg);
  filter: drop-shadow(0 10px 15px rgba(0,0,0,0.2));
}



/*--------------- Blog index Page ---------------*/
.blog-container {
  background: url("/dotted_bg.svg");
  background-repeat: no-repeat;
  position: relative;
  overflow: hidden;
  min-height: 100vh;
  padding: 0 20px 40px 20px;
}

.blog-container h1 {
   font-size: 4vh;
  margin-top: 4.4vh;
  margin-bottom: 1.5vh;
  text-align: center;
}

.card-container {
  display: grid;
  grid-template-columns: 1fr;  
  gap: 30px;
  justify-items: center;        
  max-width: 1200px;
  margin: 40px auto;
}

.card {
  width: 280px;
  height: 260px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  padding: 16px;
  border-radius: 12px;
  box-shadow: 8px 16px 16px rgba(0,0,0,0.25);

  overflow: hidden;
}

.card:nth-child(odd) {
  transform: rotate(2.5deg);
}

.card:nth-child(even) {
  transform: rotate(-2.5deg);
}

.card h2 {
  font-size: 16px;
  margin: 80px 0 0 30px;
  line-height: 1.7;     
}

.card .date {
  font-size: 12px;
  color: #777;
}

.title-card {
  color: #000;
}



/*---------------Blog view/reading page---------------*/
.blogview-container {
  display: flex;
  justify-content: center;
  align-items: flex-start;  
  background: url("/dotted_bg.svg");
  background-repeat: repeat;
  background-size: 24px 24px;
  min-height: 100vh;
}

.blogpage-wrapper {
  max-width: 1600px;
  width: 100%;
  margin: 0 auto;   
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 16px;
  justify-content: center;
  align-items: center;
}

.blogpage-title {
  font-size: clamp(28px, 4vw, 40px);
  font-weight: 500;
  line-height: 1.3;
  margin-bottom: 10px;
  text-align: center;
}

.blogpage-content {
  margin-top: 20px;
  padding: 18px;
  background: #fff;
  border-radius: 12px;
  box-shadow: 0 6px 20px rgba(0,0,0,0.08);
}

.blogpage-content p {
  font-size: 14px;
  line-height: 1.9;
  margin-bottom: 16px;
  text-align: auto;
}

.back-btn {
  align-self: flex-start;

  background: #fff;
  border: 1px solid #ddd;
  border-radius: 8px;

  padding: 8px 14px;
  font-size: 14px;

  cursor: pointer;
  transition: all 0.2s ease;
}

.back-btn:hover {
  background: #f5f5f5;
  transform: translateX(-3px);
}




/* Responsive css */
@media (min-width: 768px) {
  .block {
    display: inline-block;
  }

  .hero-text-wrapper h2 {
    font-size: 1.8vh;
  }

  .aboutme-text-container p {
    font-size: 2.6vh;
    line-height: 2.75;
  }

  .para2 {
    margin-top: -23px;
    margin-bottom: 100px;
  }

  .rectangle-container {
    grid-template-columns: repeat(2, 1fr);
    row-gap: 12vh;
  }
   .contact-icons {
    grid-template-columns: repeat(1, 1fr);
    gap: 60px;
    scale: 1.1;
    margin-top: 4%;
    justify-content: space-evenly;
  }
   .rectangle-container{
    margin: 10vh auto;
  }
  .aboutme-text-container h1 {
    font-size: 5vh;
    margin-top: 3.4vh;
    margin-bottom: 2.5vh;
  }

  .projects-container h1 {
    font-size: 5vh;
    margin-top: 3.4vh;
    margin-bottom:2.5vh;
  }

  .contact-text-container h1 {
    font-size: 5vh;
    margin-top: 3.4vh;
  }

  .blog-container h1 {
    font-size: 5vh;
    margin-top: 3.4vh;
    margin-bottom: 2.5vh;
  }
  .card-container{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  justify-items: center;
  }
  .blogpage-content p{
  font-size: 17px;
}
}

@media (min-width: 1526px) {
  body {
    height: 100dvh;
  }

  .hero-container {
    flex-direction: row;
    gap: 30px;
    align-items: center;
    justify-content: center;
  }

  .profile-image-container img {
    height: auto;
  }

  .hero-text-container {
    padding-left: 15vw;
  }

  .stickynotes-container {
    grid-template-columns: 1fr 1fr;
  }

  .profile-image-container {
    padding-right: 20vw;
  }

  .aboutme-container {
    background-size: 98% auto;
  }

  .rectangle-container {
    grid-template-columns: repeat(3, 1fr);
    row-gap: 22vh;
  }

  .aboutme-text-container h1 {
    font-size: 6vh;
    margin-top: 4.4vh;
    margin-bottom: 3.5vh;
  }

  .projects-container h1 {
    font-size: 6vh;
    margin-top: 4.4vh;
    margin-bottom: 3.5vh;
  }

  .contact-text-container h1 {
    font-size: 6vh;
    margin-top: 4.4vh;
    margin-bottom: 3.5vh;
  }

  .blog-container h1 {
    font-size: 6vh;
    margin-top: 4.4vh;
    margin-bottom: 3.5vh;
  }

  .contact-icons {
    grid-template-columns: repeat(3, 1fr);
    gap: 60px;
    scale: 1.9;
    margin-top: 8%;
  }
  .rectangle-container{
    margin: 15vh auto;
  }
  .card-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
}
.card{
  scale: 1.3;
}
.blogpage-content p{
  font-size: 19px;
}
}

